# bq-mcp

./: README.md
backend/: .gitignore  README.md  bigquery_tools.yaml  main.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: __init__.py  chat.py  health.py
backend/app/core/: lifespan.py
backend/app/models/: __init__.py  requests.py  responses.py  state.py
backend/app/services/: __init__.py  agent_service.py  mcp_service.py  tool_wrapper.py
frontend/: CLAUDE.md
frontend/app/: page.tsx
